--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <script src="os.js"></script>
+  
   <div class="container">
     <div>
       <h1>CPU Scheduling Algorithms Calculator</h1>
@@ -85,3 +85,5 @@
     </p> -->
 
   </div>
+  <script src="os.js"></script>
+</body>
